# MusicPlayer

./: AudioInfo.cpp  AudioInfo.h  AudioInfoBox.qml  AudioSearchModel.cpp  AudioSearchModel.h  CMakeLists.txt  ImageButton.qml  Main.qml  PlayerController.cpp  PlayerController.h  PlaylistPanel.qml  ProgressBar.qml  SearchField.qml  SearchPanel.qml  VolumeBar.qml  main.cpp
